k8s/strapi/test/strapi-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deploy
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: # todo
          ports:
            - containerPort: 1337
          envFrom:
            - configMapRef:
                name: strapi-config
