k8s/strapi/test/strapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  namespace: test
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
